test_scripts/errors/format_extra_args.stderr
 1 | "\(13, pretty=true)";
     ^^^
Error: Got 2 arguments, but only used 1
